<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/alert"
    android:orientation="vertical"
    android:padding="10dp" >

    <com.schoolshieldparent_ui.view.custom_controls.TextView_Bold
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:padding="5dp"
        android:text="@string/childInfo"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff" />

    <com.schoolshieldparent_ui.view.custom_controls.EditText_Regular
        android:id="@+id/editTextFirstName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/bar"
        android:ems="10"
        android:hint="@string/fname"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textColor="#ffffff"
        android:textColorHint="#b0b0b0"
        android:textCursorDrawable="@drawable/cursor" />

    <com.schoolshieldparent_ui.view.custom_controls.EditText_Regular
        android:id="@+id/editTextLastName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:background="@drawable/bar"
        android:ems="10"
        android:hint="@string/lname"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textColor="#ffffff"
        android:textColorHint="#b0b0b0"
        android:textCursorDrawable="@drawable/cursor" />

    <com.schoolshieldparent_ui.view.custom_controls.TextView_Regular
        android:id="@+id/textViewAge"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:background="@drawable/bar"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="number"
        android:padding="15dp"
        android:textColor="#ffffff"
        android:textColorHint="#b0b0b0"
        android:textCursorDrawable="@drawable/cursor"
        android:textSize="18dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:button="@drawable/checkuncheck"
            android:gravity="center"
            android:text="@string/male"
            android:textColor="#ffffff" />

        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:button="@drawable/checkuncheck"
            android:gravity="center"
            android:text="@string/female"
            android:textColor="#ffffff" />
    </LinearLayout>

    <com.schoolshieldparent_ui.view.custom_controls.Button_Regular
        android:id="@+id/button_AddChild"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/button_selector_alert"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/addChildButton"
        android:textColor="#ffffff"
        android:textSize="18dp" />

</LinearLayout>