<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@drawable/alert"
              android:orientation="vertical"
              android:padding="10dp">

    <com.schoolshieldparent_ui.view.custom_controls.TextView_Regular
        android:id="@+id/textViewMessage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/areyousure"
        android:textColor="#ffffff"
        android:textSize="17dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <com.schoolshieldparent_ui.view.custom_controls.Button_Regular
            android:id="@+id/buttonReset"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_weight=".5"
            android:background="@drawable/button_selector_alert"
            android:ems="10"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/reset"
            android:textColor="#ffffff"/>

        <com.schoolshieldparent_ui.view.custom_controls.Button_Regular
            android:id="@+id/buttonCancel"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
            android:layout_weight=".5"
            android:background="@drawable/button_selector_alert"
            android:ems="10"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/cancel"
            android:textColor="#ffffff"/>
    </LinearLayout>

</LinearLayout>